Update urls to new domain

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta name="theme-color" content="#444" />
     <meta property="og:title" content="Single Div CSS Drawings" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://alvaromontoro.com/single-div/" />
-    <meta property="og:image" content="https://alvaromontoro.com/single-div/thumb.jpg" />
+    <meta property="og:url" content="https://cssdrawings.com/" />
+    <meta property="og:image" content="https://cssdrawings.com/thumb.jpg" />
     <meta property="og:description" content="Collection of CSS drawings created with a single div." />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://alvaromontoro.com/single-div/" />
+    <meta name="twitter:url" content="https://cssdrawings.com/" />
     <meta name="twitter:title" content="Single Div CSS Drawings" />
     <meta name="twitter:description" content="Collection of CSS drawings created with a single div." />
-    <meta name="twitter:image" content="https://alvaromontoro.com/single-div/thumb.jpg" />
+    <meta name="twitter:image" content="https://cssdrawings.com/thumb.jpg" />
     <meta name="monetization" content="$ilp.uphold.com/2f28xFUMdj9Z" />
 
     <title>Single Div Drawings</title>
@@ -27,7 +27,7 @@
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" /> 
-    <link rel="canonical" href="https://alvaromontoro.com/single-div" />
+    <link rel="canonical" href="https://cssdrawings.com/" />
   </head>
   <body>
     <header class="full">
