--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
     <header class="full">
       <div>
         <h1>CSS Drawings</h1>
-        <span>A CSS project by <a href="https://twitter.com/alvaro_montoro" rel="author">Alvaro Montoro</a></span>
+        <span>A Single Div CSS Art Project by <a href="https://twitter.com/alvaro_montoro" rel="author">Alvaro Montoro</a></span>
       </div>
-      <span>
+      <div>
+        <a href="https://github.com/alvaromontoro/single-div" rel="noreferrer nofollow">GitHub</a>
         <a class="tweet-icon" href="https://twitter.com/intent/tweet?text=CSS%20Drawings%3A%20a%20single%20element%20drawings%20project%20by%20%40alvaro_montoro%20https%3A%2F%2Fcssdrawings.com">Tweet about this project</a>
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
-      </span>
+      </div>
     </header>
     <section id="chapulin" class="full chapulin-container">
       <a href="https://www.youtube.com/watch?v=tXsWcYGJqR0" class="youtube-link">Coding video</a>
