--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
       <article class="man-with-mustache-1" role="img" aria-label="Cartoon of a man with a mustache"></article>
     </section>
     <section id="red-stapler" class="interactive red-stapler-container">
-      <input type="checkbox" class="stapler red-stapler" aria-role="img" aria-label="interactive red stapler that opens/closes on click" />
+      <input type="checkbox" class="stapler red-stapler" role="img" aria-label="interactive red stapler that opens/closes on click" />
     </section>
     <section id="stapler" class="interactive stapler-container">
-      <input type="checkbox" class="stapler" aria-role="img" aria-label="interactive black stapler that opens/closes on click" />
+      <input type="checkbox" class="stapler" role="img" aria-label="interactive black stapler that opens/closes on click" />
     </section>
     <section id="woman-1" class="grand woman-container">
       <a href="https://www.youtube.com/watch?v=6YG6qJ_zIis" class="youtube-link">Coding video</a>
@@ -146,7 +146,7 @@
     <section id="speedometer" class="speedometer-container">
       <input class="animated" id="speedometer-animated" type="checkbox" role="switch" />
       <label for="speedometer-animated">Animation</label>
-      <article class="speedometer" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="--value: 75"></article>
+      <article class="speedometer" role="progressbar" aria-label="speedometer" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="--value: 75"></article>
     </section>
     <section id="christmas-tree" class="christmas-tree-container">
       <a href="https://www.youtube.com/watch?v=U8ZKEL7WFB4" class="youtube-link">Coding video</a>
@@ -154,7 +154,7 @@
     </section>
     <section id="man-with-mustache-2" class="man-with-mustache-2-container">
       <a href="https://www.youtube.com/watch?v=1XCEvltZdsM" class="youtube-link">Coding video</a>
-      <article class="man-with-mustache-2" role="image" class="cartoon" aria-label="Cartoon of a man with a mustache"></article>
+      <article class="man-with-mustache-2" role="img" class="cartoon" aria-label="Cartoon of a man with a mustache"></article>
     </section>
     <section id="harry-potter" class="full hp-characters-container">
       <a href="https://www.youtube.com/watch?v=1XCEvltZdsM" class="youtube-link">Coding video</a>
@@ -273,7 +273,7 @@ Powder</article>
     <section id="sink" class="full sink-container">
       <input class="animated" id="sink-animated" type="checkbox" role="switch" />
       <label for="sink-animated">Animation</label>
-      <article class="sink" role="image" aria-label="Animated cartoon of a paper boat sinking in a bathroom sink"></article>
+      <article class="sink" role="img" aria-label="Animated cartoon of a paper boat sinking in a bathroom sink"></article>
     </section>
     <section id="gangster" class="gangster-container">
       <article class="gangster" role="img" aria-label="cartoon silhouette of a 1920s organized crime/mafia man holding a gun"></article>
@@ -281,7 +281,7 @@ Powder</article>
     <section id="growing" class="growing-container">
       <input class="animated" id="growing-animated" type="checkbox" role="switch" />
       <label for="growing-animated">(Chrome only) Animation</label>
-      <article class="growing" role="image" aria-label="Animation of a cartoon tree growing"></article>
+      <article class="growing" role="img" aria-label="Animation of a cartoon tree growing"></article>
     </section>
     <section id="toxic" class="toxic-container">
       <a href="https://www.youtube.com/watch?v=fitjMV2bmA4" class="youtube-link">Coding video</a>
