New drawing from divtober: badge

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
-    <section id="chapulin" class="full chapulin-container">
+    <section id="badge" class="badge-container">
+      <article class="badge texture" role="img" aria-label="Illustration of the Boy Scouts' Digital Technology merit badge"></article>
+    </section>
+    <section id="chapulin" class="chapulin-container">
       <a href="https://www.youtube.com/watch?v=tXsWcYGJqR0" class="youtube-link">Coding video</a>
       <article class="chapulin" role="img" aria-label="minimalist representation of the Chapulin Colorado, a fictional superhero"></article>
     </section>
