Add divtober dry

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="dry" class="grand dry-container">
+      <input class="animated" id="dry-color" type="checkbox" role="switch" checked />
+      <label for="dry-color">Black & White mode</label>
+      <article class="dry" role="img" aria-label="Illustration of a rainy scene and an open umbrella"></article>
+    </section>
     <section id="badge" class="badge-container">
       <article class="badge texture" role="img" aria-label="Illustration of the Boy Scouts' Digital Technology merit badge"></article>
     </section>
