new drawing: divtober snack

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=10012022" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20221002" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" /> 
@@ -41,6 +41,9 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="snack" class="full snack-container">
+      <article class="snack" role="img" aria-label="cartoon of a bag of chips">Chips</article>
+    </section>
     <section id="dry" class="grand dry-container">
       <input class="animated" id="dry-color" type="checkbox" role="switch" checked />
       <label for="dry-color">Black & White mode</label>
