add drawing quiet

--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
-    <section id="snack" class="full snack-container">
+    <section id="quiet-2" class="grand quiet-2-container">
+      <article class="quiet-2" role="img" aria-label="Cartoon of a quiet night landscape with a lake in the front, mountains in the back, and some stars in the sky."></article>
+    </section>
+    <section id="snack" class="snack-container">
       <article class="snack" role="img" aria-label="cartoon of a bag of chips">Chips</article>
     </section>
-    <section id="dry" class="grand dry-container">
+    <section id="dry" class="dry-container">
       <input class="animated" id="dry-color" type="checkbox" role="switch" checked />
       <label for="dry-color">Black & White mode</label>
       <article class="dry" role="img" aria-label="Illustration of a rainy scene and an open umbrella"></article>
