--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20221002" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20221005" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" /> 
@@ -41,8 +41,11 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="stamp" class="full stamp-container">
+      <article class="stamp" role="img" aria-role="cartoon of a stamp with a picture of a 30 cent stamp postmarked october 5, 2022 from Austin TX">30¢</article>
+    </section>
     <section id="quiet-2" class="grand quiet-2-container">
-      <article class="quiet-2" role="img" aria-label="Cartoon of a quiet night landscape with a lake in the front, mountains in the back, and some stars in the sky."></article>
+      <article class="quiet-2" role="img" aria-label="drawing of a sunrise from space"></article>
     </section>
     <section id="snack" class="snack-container">
       <article class="snack" role="img" aria-label="cartoon of a bag of chips">Chips</article>
