--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20221005" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20221006" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" /> 
@@ -41,7 +41,10 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
-    <section id="stamp" class="full stamp-container">
+    <section id="meaty" class="meaty-container">
+      <article class="meaty" role="img" aria-label="Drawing of a cheeseburgers with a variable number of patties depending on the browser viewport"></article>
+    </section>
+    <section id="stamp" class="stamp-container">
       <article class="stamp" role="img" aria-role="cartoon of a stamp with a picture of a 30 cent stamp postmarked october 5, 2022 from Austin TX">30¢</article>
     </section>
     <section id="quiet-2" class="grand quiet-2-container">
