--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20221006" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20221007" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" /> 
@@ -41,6 +41,9 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="wonder" class="full wonder-container">
+      <article class="wonder" role="img" aria-label="cartoon of comic superhero Wonder Woman, a woman wearing a tiara, boots, an outfit with the colors of the USA flag, and the lasso of truth."></article>
+    </section>
     <section id="meaty" class="meaty-container">
       <article class="meaty" role="img" aria-label="Drawing of a cheeseburgers with a variable number of patties depending on the browser viewport"></article>
     </section>
