--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="night-landscape" class="squared night-landscape-container">
+      <article class="night-landscape" role="img" aria-label="Cartoon of a night landscape with a lake in the front, mountains in the back, and some stars in the sky."></article>
+    </section>
     <section id="wonder" class="full wonder-container">
       <article class="wonder" role="img" aria-label="cartoon of comic superhero Wonder Woman, a woman wearing a tiara, boots, an outfit with the colors of the USA flag, and the lasso of truth."></article>
     </section>
