--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </div>
     </header>
     <section id="haunted" class="haunted-container">
+      <a href="https://www.youtube.com/watch?v=e9UvI3cR__8" class="youtube-link">Coding video</a>
       <article class="haunted" role="img" aria-label="cartoon of a haunted house with a ghost peaking out the window"></article>
     </section>
     <section id="wonder" class="wonder-container">
