--- a/index.html
+++ b/index.html
@@ -41,11 +41,16 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="rise" class="rise-container">
+      <article class="rise" role="img" aria-label="Cartoon of a tombstone with a zombie hand raising from the grave">RIP</article>
+    </section>
     <section id="haunted" class="haunted-container">
+      <input class="animated" id="haunted-animated" type="checkbox" role="switch" />
+      <label for="haunted-animated">Animation</label>
       <a href="https://www.youtube.com/watch?v=e9UvI3cR__8" class="youtube-link">Coding video</a>
       <article class="haunted" role="img" aria-label="cartoon of a haunted house with a ghost peaking out the window"></article>
     </section>
-    <section id="wonder" class="wonder-container">
+    <section id="wonder" class="full wonder-container">
       <article class="wonder" role="img" aria-label="cartoon of comic superhero Wonder Woman, a woman wearing a tiara, boots, an outfit with the colors of the USA flag, and the lasso of truth."></article>
     </section>
     <section id="night-landscape" class="squared night-landscape-container">
