add video to space sunrise drawing

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <article class="stamp" role="img" aria-role="cartoon of a stamp with a picture of a 30 cent stamp postmarked october 5, 2022 from Austin TX">30¢</article>
     </section>
     <section id="quiet-2" class="grand quiet-2-container">
+      <a href="https://www.youtube.com/watch?v=UiDSuWOS1NQ" class="youtube-link">Coding video</a>
       <article class="quiet-2" role="img" aria-label="drawing of a sunrise from space"></article>
     </section>
     <section id="snack" class="snack-container">
