--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20221008" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20221010" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -41,6 +41,9 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="game-2" class="full game-2-container">
+      <article class="game-2" role="img" aria-label="Cartoon of a Game Boy console with the text Divtober CSS Boy">Divtober CSS Boy</article>
+    </section>
     <section id="rise" class="rise-container">
       <article class="rise" role="img" aria-label="Cartoon of a tombstone with a zombie hand raising from the grave">RIP</article>
     </section>
