--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
-    <section id="game-2" class="full game-2-container">
+    <section id="burger" class="burger-container">
+      <a href="https://www.youtube.com/watch?v=e5rf6UAFWMU" class="youtube-link">Coding video</a>
+      <article class="burger" role="img" aria-label="Cartoon of a burger running (fast food)"></article>
+    </section>
+    <section id="game-2" class="game-2-container">
+      <a href="https://www.youtube.com/watch?v=XLIh-NGUJ9Q" class="youtube-link">Coding video</a>
       <article class="game-2" role="img" aria-label="Cartoon of a Game Boy console with the text Divtober CSS Boy">Divtober CSS Boy</article>
     </section>
     <section id="rise" class="rise-container">
