new drawing: shadow

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20221010" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20221012" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -41,6 +41,10 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="shadow" class="full shadow-container">
+      <a href="https://www.youtube.com/watch?v=34zyL-rNbZs" class="youtube-link">Coding video</a>
+      <article class="shadow" role="img" aria-label="the word shadow with a shadow"></article>
+    </section>
     <section id="burger" class="burger-container">
       <a href="https://www.youtube.com/watch?v=e5rf6UAFWMU" class="youtube-link">Coding video</a>
       <article class="burger" role="img" aria-label="Cartoon of a burger running (fast food)"></article>
