New drawing: divtober forever

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20221012" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20221013" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -41,7 +41,10 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
-    <section id="shadow" class="full shadow-container">
+    <section id="forever" class="forever-container">
+      <article class="forever" role="img" aria-label="cartoon with the silhouette of a man carrying a boulder uphill forever (the Myth of Sisyphus)"></artice>
+    </section>
+    <section id="shadow" class="shadow-container">
       <a href="https://www.youtube.com/watch?v=34zyL-rNbZs" class="youtube-link">Coding video</a>
       <article class="shadow" role="img" aria-label="the word shadow with a shadow"></article>
     </section>
