new drawing: erase

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="erase" class="full erase-container">
+      <article class="erase" role="img" aria-label="cartoon with the word powerless and a pencil erasing the 'less' part"></article>
+    </section>
     <section id="forever" class="forever-container">
       <article class="forever" role="img" aria-label="cartoon with the silhouette of a man carrying a boulder uphill forever (the Myth of Sisyphus)"></artice>
     </section>
