New drawings: stripes

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="stripes" class="full stripes-container">
+      <article class="stripes" role="img" aria-label="drawing of the first three albums of The White Stripes (minus the people)"></article>
+    </section>
     <section id="erase" class="full erase-container">
       <article class="erase" role="img" aria-label="cartoon with the word powerless and a pencil erasing the 'less' part"></article>
     </section>
