New drawing (pun) + reorg

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20221017" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20221018" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -41,11 +41,14 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="erase" class="pun-container">
+      <article class="pun" role="img" aria-label="Cartoon of the moon with a restaurant on top, and the text: 'Did you hear about the restaurant on the moon? The food was good but it had no atmosphere'"></article>
+    </section>
+    <section id="erase" class="erase-container">
+      <article class="erase" role="img" aria-label="cartoon with the word powerless and a pencil erasing the 'less' part"></article>
+    </section>
     <section id="stripes" class="full stripes-container">
       <article class="stripes" role="img" aria-label="drawing of the first three albums of The White Stripes (minus the people)"></article>
-    </section>
-    <section id="erase" class="full erase-container">
-      <article class="erase" role="img" aria-label="cartoon with the word powerless and a pencil erasing the 'less' part"></article>
     </section>
     <section id="forever" class="forever-container">
       <article class="forever" role="img" aria-label="cartoon with the silhouette of a man carrying a boulder uphill forever (the Myth of Sisyphus)"></artice>
