--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20221019" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20221020" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -41,7 +41,12 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
-    <section id="mythical" class="full mythical-container">
+    <section id="ten" class="ten-container">
+      <input class="animated" id="ten-animated" type="checkbox" role="switch" />
+      <label for="ten-animated">(Chrome-only) Animation</label>
+      <article class="ten" role="img" aria-label="Cartoon of Lionel Messi wearing Barcelona jersey (if animated, also PSG and Argentina jerseys)"></article>
+    </section>
+    <section id="mythical" class="mythical-container">
       <a href="https://www.youtube.com/watch?v=aDTl_hPm1Sc" class="youtube-link">Coding video</a>
       <article class="mythical" role="img" aria-label="Cartoon of Medusa, a woman with snake hair"></article>
     </section>
