New cartoon: valuable divtober

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20221020" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20221021" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -41,6 +41,9 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="valuable" class="full valuable-container">
+      <article class="valuable" role="img" aria-label="Cartoon of an open treasure chest"></article>
+    </section>
     <section id="ten" class="ten-container">
       <input class="animated" id="ten-animated" type="checkbox" role="switch" />
       <label for="ten-animated">(Chrome-only) Animation</label>
