--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20221022" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20221023" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -41,7 +41,10 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
-    <section id="soft" class="full soft-container">
+    <section id="pop" class="pop-container">
+      <article class="pop" role="img" aria-label="Cartoon of an owl drawn using different concentric circles of color"></article>
+    </section>
+    <section id="soft" class="soft-container">
       <article class="soft" role="img" aria-label="Cartoon of a can of soda (soft drink) with the name CSSoda."></article>
     </section>
     <section id="valuable" class="valuable-container">
