--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20221023" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20221024" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -41,6 +41,9 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="cubed" class="full cubed-container">
+      <article class="cubed" role="img" aria-label="Cartoon of a broken cube"></article>
+    </section>
     <section id="pop" class="pop-container">
       <article class="pop" role="img" aria-label="Cartoon of an owl drawn using different concentric circles of color"></article>
     </section>
