New drawing: vintage

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20221025" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20221026" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -41,8 +41,11 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
-    <section id="luminous" class="luminous-container">
+    <section id="luminous" class="full luminous-container">
       <article class="luminous" role="img" aria-label="Cartoon of lighted candle"></article>
+    </section>
+    <section id="vintage" class="vintage-container">
+      <article class="vintage" role="img" aria-label="pop art style vhs tapes"></article>
     </section>
     <section id="cubed" class="cubed-container">
       <article class="cubed" role="img" aria-label="Cartoon of a broken cube"></article>
