New drawing: grain

--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
-    <section id="luminous" class="full luminous-container">
-      <article class="luminous" role="img" aria-label="Cartoon of lighted candle"></article>
+    <section id="grain" class="grain-container">
+      <article class="grain" role="img" aria-label="Cartoon of a salt shaker (with eyes and a smiley face) with a grain of salt next to it"></article>
     </section>
     <section id="vintage" class="vintage-container">
       <article class="vintage" role="img" aria-label="pop art style vhs tapes"></article>
+    </section>
+    <section id="luminous" class="luminous-container">
+      <article class="luminous" role="img" aria-label="Cartoon of lighted candle"></article>
     </section>
     <section id="cubed" class="cubed-container">
       <article class="cubed" role="img" aria-label="Cartoon of a broken cube"></article>
