--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20221027" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20221028" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -41,6 +41,9 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="monster" class="grand monster-container">
+      <article class="monster" role="img" aria-label="Cartoon of No-Face from Spirited Away (a monster with semi-translucid black cape and a smiling mask at the top) on a bridge widht clouds in the background."></article>
+    </section>
     <section id="grain" class="grain-container">
       <article class="grain" role="img" aria-label="Cartoon of a salt shaker (with eyes and a smiley face) with a grain of salt next to it"></article>
     </section>
