Three last drawings of divtober

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20221028" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20221031" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -41,6 +41,15 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="brew" class="tall brew-container">
+      <article class="brew" role="img" aria-label="cartoon of a french press with brewed coffee"></article>
+    </section>
+    <section id="free" class="free-container">
+      <article class="free" role="img" aria-label="A man with a table full of unhealthy food asks for a sugar-free soda"></article>
+    </section>
+    <section id="bill" class="bill-container">
+      <article class="bill" role="img" aria-label="Cartoon of Bill Cipher, a floating triangle with a single eye, a top hat and a bow tie"></article>
+    </section>
     <section id="monster" class="grand monster-container">
       <article class="monster" role="img" aria-label="Cartoon of No-Face from Spirited Away (a monster with semi-translucid black cape and a smiling mask at the top) on a bridge widht clouds in the background."></article>
     </section>
