--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
         <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
       </div>
     </header>
+    <section id="whale" class="whale-container">
+      <article class="whale" role="img" aria-label="Cartoon of a blue whale"></article>
+    </section>
+    <section id="death" class="death-container">
+      <a href="https://www.youtube.com/watch?v=gNMuPuuNr4c" class="youtube-link">Coding video</a>
+      <article class="death" role="img" aria-label="Cartoon of the grim reaper"></article>
+    </section>
+    <section id="chibi" class="grand chibi-container">
+      <a href="https://www.youtube.com/watch?v=NAuxqUEqr68" class="youtube-link">Coding video</a>
+      <article class="chibi" role="img" aria-label="cartoon of a girl drawn in chibi/manga style"></article>
+    </section>
     <section id="brew" class="tall brew-container">
       <article class="brew" role="img" aria-label="cartoon of a french press with brewed coffee"></article>
     </section>
