--- a/index.html
+++ b/index.html
@@ -491,6 +491,12 @@ Powder</article>
         Inspired by <a href="https://a.singlediv.com/" rel="noreferrer nofollow">Lynn Fisher</a>
       </span>
     </footer>
+    <nav aria-labelledby="webring" class="full">
+      <h2 id="webring">CSS JOY Webring</h2>
+      <a href="https://webri.ng/webring/cssjoy/previous?via=https://cssdrawings.com">Previous</a>
+      <a href="https://webri.ng/webring/cssjoy/random?via=https://cssdrawings.com">Random</a>
+      <a href="https://webri.ng/webring/cssjoy/next?via=https://cssdrawings.com">Next</a>
+    </nav>
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bowlby+One&family=Parisienne&family=Zen+Kurenaido&display=swap" rel="stylesheet">
   </body>
 </html>
