--- a/index.html
+++ b/index.html
@@ -52,6 +52,20 @@
       <a href="https://www.youtube.com/watch?v=NAuxqUEqr68" class="youtube-link">Coding video</a>
       <article class="chibi" role="img" aria-label="cartoon of a girl drawn in chibi/manga style"></article>
     </section>
+    <section id="framed" class="framed-container">
+      <article class="framed" role="img" aria-label="drawing of a woman holding a tulip inside a frame"></article>
+    </section>
+    <section id="coffee-mug-1" class="coffee-mug-1-container">
+      <article class="coffee-mug-1" role="img" aria-label="Cartoon of realistic-looking coffee mug"></article>
+    </section>
+    <section id="browser-logos" class="full browsers-container">
+      <article class="adidas-logo" role="img" aria-label="Adidas logo"></article>
+      <article class="figma-logo" role="img" aria-label="Figma logo"></article>
+      <article class="webtorrent-logo" role="img" aria-label="Maxthon logo"></article>
+      <article class="discord-logo" role="img" aria-label="Discord logo"></article>
+      <article class="css-logo" role="img" aria-label="CSS logo"></article>
+      <article class="html-logo" role="img" aria-label="HTML logo"></article>
+    </section>
     <section id="brew" class="tall brew-container">
       <article class="brew" role="img" aria-label="cartoon of a french press with brewed coffee"></article>
     </section>
