--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <article class="whale" role="img" aria-label="Cartoon of a blue whale"></article>
     </section>
     <section id="death" class="death-container">
-      <a href="https://www.youtube.com/watch?v=gNMuPuuNr4c" class="youtube-link">Coding video</a>
+      <a href="https://www.youtube.com/watch?v=gNMuPuuNr4c" class="youtube-link">Animation video</a>
       <article class="death" role="img" aria-label="Cartoon of the grim reaper"></article>
     </section>
     <section id="chibi" class="grand chibi-container">
