--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
       </div>
       <div>
         <a href="https://github.com/alvaromontoro/single-div" rel="noreferrer nofollow">GitHub</a>
-        <a class="tweet-icon" href="https://twitter.com/intent/tweet?text=CSS%20Drawings%3A%20a%20single%20element%20drawings%20project%20by%20%40alvaro_montoro%20https%3A%2F%2Fcssdrawings.com">Tweet about this project</a>
-        <a class="coffee-icon" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
+        <a class="share-icon tweet-icon" rel="external noreferrer nofollow" href="https://twitter.com/intent/tweet?text=CSS%20Drawings%3A%20a%20single%20element%20drawings%20project%20by%20%40alvaro_montoro%20https%3A%2F%2Fcssdrawings.com">Tweet about this project</a>
+        <a class="share-icon coffee-icon" rel="external noreferrer nofollow" href="https://buymeacoffee.com/alvaromontoro">Buy me a coffee</a>
+        <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
     <section id="whale" class="whale-container">
