--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <title>Single Div Drawings</title>
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css?date=20230630" />
     <link rel="stylesheet" href="./css/drawings.min.css?date=20230630" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
