Updates, updates, updates!
- New drawings from Divtober 23
- Updated link from Twitter to LinkedIn
- Updated copyright year to 2023 😅

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header class="full">
       <div>
         <h1>CSS Drawings</h1>
-        <span>A Single Div CSS Art Project by <a href="https://twitter.com/alvaro_montoro" rel="author">Alvaro Montoro</a></span>
+        <span>A Single Div CSS Art Project by <a href="https://www.linkedin.com/in/alvaromontoro/" rel="author">Alvaro Montoro</a></span>
       </div>
       <div>
         <a href="https://github.com/alvaromontoro/single-div" rel="noreferrer nofollow">GitHub</a>
@@ -42,6 +42,37 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
+    <section id="treat" class="full treat-container">
+      <a href="https://www.youtube.com/watch?v=vHln4zdlxoI" class="youtube-link">Coding video</a>
+      <article class="treat" role="img" aria-label="drawing of a two-scoop icecream with a cherry on top"></article>
+    </section>
+    <section id="bounce" class="grand bounce-container">
+      <input class="animated" id="bounce-animated" type="checkbox" role="switch" />
+      <label for="bounce-animated">Animation</label>
+      <article class="bounce" role="img" aria-label="cartoon of a bouncer holding a clipboard in front of a door"></article>
+    </section>
+    <section id="crawl" class="crawl-container">
+      <input class="animated" id="crawl-animated" type="checkbox" role="switch" />
+      <label for="crawl-animated">(Chrome-Only) Animation</label>
+      <article class="crawl" role="img" aria-label="Cartoon of a smiling earthworm"></article>
+    </section>
+    <section id="picasso" class="tall picasso-container">
+      <article class="picasso" role="img" aria-label="Cartoon of an artist (Pablo Picasso) in cubist/blue style"></article>
+    </section>
+    <section id="lost" class="lost-container">
+      <article class="lost" role="img" aria-label="Cartoon of lost and found wooden box with different items: baseballs, a football, a racket (it's a reference to Pixar's Lou)."></article>
+    </section>
+    <section id="mission-impossible" class="grand mission-impossible-container">
+      <input class="animated" id="mission-impossible-animated" type="checkbox" role="switch" />
+      <label for="mission-impossible-animated">Animation</label>
+      <article class="mission-impossible" role="img" aria-label="cartoon of a man balancing while hanging from a rope in the ceiling"></article>
+    </section>
+    <section id="impossible" class="impossible-container">
+      <article class="impossible" role="img" aria-label="Cartoon of an impossible optical effect"></article>
+    </section>
+    <section id="pumpkin" class="pumpkin-container">
+      <article class="pumpkin" role="img" aria-label="Cartoon of a smiling carved pumpkin"></article>
+    </section>
     <section id="whale" class="whale-container">
       <article class="whale" role="img" aria-label="Cartoon of a blue whale"></article>
     </section>
@@ -500,7 +531,7 @@ Powder</article>
     </section> 
     <footer class="full">
       <span>
-        &copy; Copyright 2018-2022. <a href="https://alvaromontoro.com" rel="author">Alvaro Montoro</a>
+        &copy; Copyright 2018-2023. <a href="https://alvaromontoro.com" rel="author">Alvaro Montoro</a>
       </span>
       <span>
         Inspired by <a href="https://a.singlediv.com/" rel="noreferrer nofollow">Lynn Fisher</a>
