New divtober: mix

--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
-    <section id="treat" class="full treat-container">
+    <section id="mix" class="mix-container">
+      <input class="animated" id="mix-animated" type="checkbox" role="switch" />
+      <label for="mix-animated">Animation</label>
+      <article class="mix" role="img" aria-label="drawing of a mixing bowl with a whisk"></article>
+    </section>
+    <section id="treat" class="treat-container">
       <a href="https://www.youtube.com/watch?v=vHln4zdlxoI" class="youtube-link">Coding video</a>
       <article class="treat" role="img" aria-label="drawing of a two-scoop icecream with a cherry on top"></article>
     </section>
