--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css?date=20230630" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20231007" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20231009" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -42,9 +42,16 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
+    <section id="space" class="full space-container">
+      <input class="animated" id="space-animated" type="checkbox" role="switch" />
+      <label for="space-animated">Animation</label>
+      <a href="https://www.youtube.com/watch?v=EIzsv46dFSQ" class="youtube-link">Coding video</a>
+      <article class="space" role="img" aria-label="drawing of an astronaut floating in space"></article>
+    </section>
     <section id="mix" class="mix-container">
       <input class="animated" id="mix-animated" type="checkbox" role="switch" />
       <label for="mix-animated">Animation</label>
+      <a href="https://www.youtube.com/watch?v=EIzsv46dFSQ" class="youtube-link">Coding video</a>
       <article class="mix" role="img" aria-label="drawing of a mixing bowl with a whisk"></article>
     </section>
     <section id="treat" class="treat-container">
