--- a/index.html
+++ b/index.html
@@ -42,10 +42,13 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
+    <section id="sparkle" class="full sparkle-container">
+      <article class="sparkle" role="img" aria-label="Cartoon of a burning sparkle"></article>
+    </section>
     <section id="space" class="full space-container">
       <input class="animated" id="space-animated" type="checkbox" role="switch" />
       <label for="space-animated">Animation</label>
-      <a href="https://www.youtube.com/watch?v=EIzsv46dFSQ" class="youtube-link">Coding video</a>
+      <a href="https://www.youtube.com/watch?v=5W3ebJfYi1I" class="youtube-link">Coding video</a>
       <article class="space" role="img" aria-label="drawing of an astronaut floating in space"></article>
     </section>
     <section id="mix" class="mix-container">
