--- a/index.html
+++ b/index.html
@@ -42,7 +42,25 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
-    <section id="sparkle" class="full sparkle-container">
+    <section id="small" class="full small-container">
+      <a href="https://www.youtube.com/watch?v=lPx8WRTwZMw" class="youtube-link">Coding video</a>
+      <article class="small" role="img" aria-label="Cartoon of a small chick coming out of the egg"></article>
+    </section>
+    <section id="collect" class="collect-container">
+      <input class="animated" id="collect-animated" type="checkbox" role="switch" />
+      <label for="collect-animated">Animation</label>
+      <article class="collect" role="img" aria-label="Cartoon of a baseball card for player Alvaro Montoro, who plays at the Red SoCSS">ALVARO MONTORO</article>
+    </section>
+    <section id="glass" class="glass-container">
+      <input class="animated" id="glass-animated" type="checkbox" role="switch" />
+      <label for="glass-animated">Animation</label>
+      <article class="glass" role="img" aria-label="Cartoon of a magnifying glass with a spider moving up and down (getting behind of the mangifying glass and getting bigger)"></article>
+    </section>
+    <section id="bones" class="bones-container">
+      <a href="https://www.youtube.com/watch?v=R-YnTXveO_g" class="youtube-link">Coding video</a>
+      <article class="bones" role="img" aria-label="Cartoon of a cute-ish skeleton"></article>
+    </section>
+    <section id="sparkle" class="sparkle-container">
       <article class="sparkle" role="img" aria-label="Cartoon of a burning sparkle"></article>
     </section>
     <section id="space" class="full space-container">
