New cartoon: remember

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
-    <section id="small" class="full small-container">
+    <section id="remember" class="remember-container">
+      <article class="remember" role="img" aria-label="Cartoon of a hand with a thread knotted around the index finger"></article>
+    </section>
+    <section id="small" class="small-container">
       <a href="https://www.youtube.com/watch?v=lPx8WRTwZMw" class="youtube-link">Coding video</a>
       <article class="small" role="img" aria-label="Cartoon of a small chick coming out of the egg"></article>
     </section>
