--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css?date=20230630" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20231016" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20231017" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -42,7 +42,10 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
-    <section id="tangled" class="full tangled-container">
+    <section id="brave" class="brave-container">
+      <article class="brave" role="img" aria-label="Cartoon of a mouse looking at a lion and saying 'fuck you!' defiantly"></article>
+    </section>
+    <section id="tangled" class="tangled-container">
       <a href="https://www.youtube.com/watch?v=wJBEYKmqDEw" class="youtube-link">Coding video</a>
       <article class="tangled" role="img" aria-label="Cartoon of a tower with a girl with really long hair looking from a window at the top of the tower"></article>
     </section>
