adding last 3 divtober

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css?date=20230630" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20231017" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20231020" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -42,6 +42,16 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
+    <section id="sticky" class="tall interactive sticky-container">
+      <a href="https://www.youtube.com/watch?v=YWIWXtIumBk" class="youtube-link">Coding video</a>
+      <input type="range" class="sticky" value="70" min="30" max="100" oninput="this.style='--v:'+this.value+'%'" role="img" aria-label="cartoon of a shoe that has stepped on a sticky chewing gum on the floor"/>
+    </section>
+    <section id="seeing" class="seeing-container">
+      <article class="seeing" role="img" aria-label="Drawing of the all-seeing Eye of Providence (an eye inside of a triangle)"></article>
+    </section>
+    <section id="component" class="component-container">
+      <article class="component" role="img" aria-label="Chemical formula of the caffeine"></article>
+    </section>
     <section id="brave" class="brave-container">
       <article class="brave" role="img" aria-label="Cartoon of a mouse looking at a lion and saying 'fuck you!' defiantly"></article>
     </section>
