new drawing: faraway (sextant)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css?date=20230630" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20231020" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20231021" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -42,6 +42,10 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
+    <section id="faraway" class="full faraway-container">
+      <a href="https://www.youtube.com/watch?v=q7GYJ41fKDA" class="youtube-link">Coding video</a>
+      <article class="faraway" role="img" aria-label="Cartoon of a sextant (a navigational instrument to measure distances)"></article>
+    </section>
     <section id="sticky" class="tall interactive sticky-container">
       <a href="https://www.youtube.com/watch?v=YWIWXtIumBk" class="youtube-link">Coding video</a>
       <input type="range" class="sticky" value="70" min="30" max="100" oninput="this.style='--v:'+this.value+'%'" role="img" aria-label="cartoon of a shoe that has stepped on a sticky chewing gum on the floor"/>
