new cartoon: alive
+new font

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Single Div Drawings</title>
 
     <link rel="stylesheet" href="./css/styles.css?date=20230630" />
-    <link rel="stylesheet" href="./css/drawings.min.css?date=20231021" />
+    <link rel="stylesheet" href="./css/drawings.min.css?date=20231022" />
     <link rel="author" href="https://www.linkedin.com/in/alvaromontoro/" />
     <link rel="shortcut icon" href="./fav.ico" /> 
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -42,7 +42,11 @@
         <a class="share-icon patreon-icon" rel="external noreferrer nofollow" href="https://www.patreon.com/alvaromontoro">Become a patron</a>
       </div>
     </header>
-    <section id="faraway" class="full faraway-container">
+    <section id="alive" class="alive-container">
+      <a href="https://www.youtube.com/watch?v=vmX9O0jLe4Y" class="youtube-link">Coding video</a>
+      <article class="alive" role="img" aria-label="Cartoon of a sextant (a navigational instrument to measure distances)"></article>
+    </section>
+    <section id="faraway" class="faraway-container">
       <a href="https://www.youtube.com/watch?v=q7GYJ41fKDA" class="youtube-link">Coding video</a>
       <article class="faraway" role="img" aria-label="Cartoon of a sextant (a navigational instrument to measure distances)"></article>
     </section>
@@ -600,6 +604,6 @@ Powder</article>
       <a href="https://webri.ng/webring/cssjoy/random?via=https://cssdrawings.com">Random</a>
       <a href="https://webri.ng/webring/cssjoy/next?via=https://cssdrawings.com">Next</a>
     </nav>
-    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bowlby+One&family=Parisienne&family=Zen+Kurenaido&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bowlby+One&family=Parisienne&family=Zen+Kurenaido&family=Rye&display=swap" rel="stylesheet">
   </body>
 </html>
